formating tasks: collapsing click, edit and delete buttons

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,6 +3,9 @@
 <head>
   <!-- ... other head elements ... -->
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+  <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"/>
   <style>
     html, body, #root {
       margin: 0;
